--- a/resources/sass/common/_modal.sass
+++ b/resources/sass/common/_modal.sass
@@ -1,3 +1,41 @@
+
+.modal-mask
+  position: fixed
+  z-index: 9998
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  background-color: rgba(0, 0, 0, 0.5)
+  display: table
+  transition: opacity 0.3s eas
+
+
+.modal-wrapper
+  display: table-cell
+  vertical-align: middle
+
+.modal-container
+  max-width: 50%
+  margin: 0px auto
+  padding: 20px 30px
+  background-color: #fff
+  border-radius: 12px
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33)
+  transition: all 0.3s ease
+  font-family: Helvetica, Arial, sans-serif
+
+
+.modal__header
+  margin-top: 0
+  text-align: center
+  font-family: Graphik-Bold
+  +bold
+
+.modal__body
+  margin: 20px 0
+
+
 /*
  * The following styles are auto-applied to elements with
  * transition="modal" when their visibility is toggled
@@ -10,13 +48,11 @@
 .modal-enter
   opacity: 0
 
-.modal-leave-active 
+
+.modal-leave-active
   opacity: 0
 
 
-.modal-enter 
-  .modal-container,
-    .modal-leave-active 
-      .modal-container
-        -webkit-transform: scale(1.1)
-        transform: scale(1.1)
+.modal-enter .modal-container, .modal-leave-active .modal-container
+  -webkit-transform: scale(1.1)
+  transform: scale(1.1)
